samples/_failures_safe/1761719422_f78cbe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_44eb96d4.c: In function ‘find_shortest_path’:
./samples/SAFE/__tmp_44eb96d4.c:151:5: error: expected declaration or statement at end of input
  151 |     for (int i = path_len - 1; i >= 0; i--) {
      |     ^~~
./samples/SAFE/__tmp_44eb96d4.c:151:5: error: expected declaration or statement at end of input
